<resources>
    <string name="app">EmerCare</string>
    <string name="home">Home</string>
    <string name="find">Find</string>
    <string name="record">Record</string>
    <string name="resource">Resource</string>
    <string name="profile">Profile</string>
    <string name="setting">Setting</string>
    <string name="more">More About Us</string>
    <string name="privacy_setting">Privacy Setting</string>
    <string name="about">About Us</string>
    <string name="terms">Terms of Use</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="sign_out">Sign Out</string>
    <string name="back">Back</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot">Forgot your password?</string>
    <string name="sign_in">Sign In</string>
    <string name="or">Or</string>
    <string name="now">Sign up now</string>
    <string name="sign_up">Sign Up</string>
    <string name="create">Creating an Account</string>
    <string name="reset_title">Reset Your Password</string>
    <string name="confirm">Confirm</string>
    <string name="please_password">Please enter your e-mail address to receive the reset password link</string>
    <string name="edit">Edit Profile</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="height">Height</string>
    <string name="unit">Unit</string>
    <string name="weight">Weight</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="first">First Aid</string>
    <string name="skill">First Aid Skill</string>
    <string name="disaster">Disaster Management</string>
    <string name="health">Healthcare</string>
    <string name="disease">Disease</string>
    <string name="exercise">Exercise</string>
    <string name="health_data">Health Data</string>
    <string name="glucose">Blood Glucose</string>
    <string name="pressure">Blood Pressure</string>
    <string name="location">Current Location</string>
    <string name="clinic">Clinic</string>
    <string name="hospital">Hospital</string>
    <string name="police">Police Station</string>
    <string name="fire">Fire Station</string>
    <string name="add">Add</string>>
    <string name="date">Date</string>>
    <string name="period">Period</string>
    <string name="systolic">Systolic (mmHg)</string>
    <string name="diastolic">Diastolic (mmHg)</string>
    <string name="pulse">Pulse (bpm)</string>
    <string name="search_location">Search Location</string>
    <string name="search_place">Search a Place</string>
    <string name="confirm_location">Confirm Location</string>
    <string name="place">Place</string>
    <string name="place_name">Place Name</string>
    <string name="rating">Rating</string>
    <string name="distance">Distance</string>
    <string name="status">Status</string>
    <string name="closed">Closed</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="website">Website</string>
    <string name="opening">Opening Hours</string>
    <string name="course">Course</string>
    <string name="course_name">Course Name</string>
    <string name="no_data">No Data</string>
    <string name="profile_detail">Profile Detail</string>
    <string name="please_detail">Please enter your details before continuing</string>
    <string name="please_sign">Please sign in before using this feature</string>
    <string name="sign_here">Sign In Here</string>
    <string name="please_verify">Please verify your e-mail before using this feature</string>
    <string name="send">Send Verification &amp; Sign Out</string>
    <string name="verify">Verify E-mail Now</string>
    <string name="new_password">New Password</string>
    <string name="new_confirm">Confirm New Password</string>
    <string name="reset_password">Reset Your Password</string>
    <string name="reset">Reset</string>
    <string name="delete_account">Delete Your Account</string>
    <string name="delete">Delete</string>
    <string name="are_you">Are you sure you want to delete your account?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="password_guideline">Password Guideline</string>
    <string name="guideline_1">1. Must contain at least one digit</string>
    <string name="guideline_2">2. Must contain at least one lower case letter</string>
    <string name="guideline_3">3. Must contain at least one upper case letter</string>
    <string name="guideline_4">4. Must contain at least one special character</string>
    <string name="guideline_5">5. Do not contain any whitespace</string>
    <string name="guideline_6">6. At least eight places though</string>
    <string name="no_address">No Address Found</string>
    <string name="no_phone">No Phone Number Found</string>
    <string name="no_website">No Website Found</string>
    <string name="no_record">No Record Found</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="data">Data</string>
    <string name="welcome">Welcome to EmerCare\n\nTo start record your health data\nplease tap the Record tab at bottom</string>
    <string name="delete_record">Delete This Record</string>
    <string name="are_you_sure">Are you sure you want to delete this record?</string>
    <string name="update_record">Update This Record</string>
    <string name="are_you_sure_you">Are you sure you want to update this record?</string>
    <string name="bmi">BMI :&#160;</string>
    <string name="bmi_unit">&#160;kg/m\u00B2</string>
    <string name="old">Old Password</string>
    <string name="please_delete">Please enter your password to grant the permission to delete this account</string>
    <string name="all">All Day</string>
    <string name="no_gps">No GPS Found</string>
    <string name="place_photo">Place Photo</string>
</resources>