<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/background_dialog_tab"
    android:elevation="36dp"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/delete_account"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/please_delete"
        android:textAllCaps="false"
        android:textColor="@color/word"
        android:textSize="14sp"
        android:textStyle="normal" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialog_password_til_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:hint="@string/password"
        android:textColorHint="@color/word"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/blue"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:hintTextColor="@color/word">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialog_password_tiet_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:inputType="textPassword"
            android:textColor="@color/word"
            android:textColorHint="@color/word"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/dialog_password_btn_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="sans-serif-medium"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/delete"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="normal"
        app:backgroundTint="@color/red"
        app:cornerRadius="8dp" />

</LinearLayout>