<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/background_dialog_tab"
    android:elevation="36dp">

    <TextView
        android:id="@+id/dialog_delete_tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/delete_account"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dialog_delete_tv_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/are_you"
        android:textAllCaps="false"
        android:textColor="@color/word"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_delete_tv_title" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_delete_tv_description">

        <Button
            android:id="@+id/dialog_delete_btn_no"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-medium"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/no"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="normal"
            app:backgroundTint="@color/green"
            app:elevation="2dp"
            tools:ignore="TextContrastCheck,TextContrastCheck" />

        <Button
            android:id="@+id/dialog_delete_btn_yes"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-medium"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/yes"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="normal"
            app:backgroundTint="@color/red"
            app:elevation="2dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>