<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="345dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/background_dialog_tab"
    android:elevation="36dp">

    <TextView
        android:id="@+id/dialog_setting_tv_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/setting"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dialog_setting_btn_more"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="sans-serif"
        android:gravity="start|center_vertical"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/more"
        android:textAllCaps="false"
        android:textColor="@color/word"
        android:textSize="14sp"
        android:textStyle="bold"
        app:backgroundTint="@color/white"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_setting_tv_setting"
        app:strokeColor="@color/dialog_btnSetting"
        app:strokeWidth="1dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dialog_setting_btn_privacy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="sans-serif"
        android:gravity="start|center_vertical"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/privacy_setting"
        android:textAllCaps="false"
        android:textColor="@color/word"
        android:textSize="14sp"
        android:textStyle="bold"
        app:backgroundTint="@color/white"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_setting_btn_more"
        app:strokeColor="@color/dialog_btnSetting"
        app:strokeWidth="1dp" />

    <Button
        android:id="@+id/dialog_setting_btn_sOut"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="sans-serif-medium"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/sign_out"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="normal"
        app:backgroundTint="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_setting_btn_privacy" />

</androidx.constraintlayout.widget.ConstraintLayout>