<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".sign.SignIn">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/sign_in_img_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/app_logo" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sign_in_til_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:hint="@string/email"
            android:textColorHint="@color/word"
            app:boxBackgroundColor="@color/white"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/blue"
            app:endIconMode="clear_text"
            app:endIconTint="@color/grey"
            app:errorEnabled="true"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:hintTextColor="@color/word"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_img_logo"
            app:startIconDrawable="@drawable/icon_email"
            app:startIconTint="@color/grey">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sign_in_tiet_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:inputType="textEmailAddress"
                android:textColor="@color/word"
                android:textColorHint="@color/word"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sign_in_til_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColorHint="@color/word"
            app:boxBackgroundColor="@color/white"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/blue"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/grey"
            app:errorEnabled="true"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:hintTextColor="@color/word"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_til_email"
            app:startIconDrawable="@drawable/icon_password"
            app:startIconTint="@color/grey">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sign_in_tiet_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:inputType="textPassword"
                android:textColor="@color/word"
                android:textColorHint="@color/word"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/sign_in_tv_forgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/forgot"
            android:textColor="@color/word"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_til_password" />

        <Button
            android:id="@+id/sign_in_btn_sIn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="normal"
            app:backgroundTint="@color/blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_tv_forgot" />

        <TextView
            android:id="@+id/sign_in_tv_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif"
            android:text="@string/or"
            android:textColor="@color/word"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_btn_sIn" />

        <Button
            android:id="@+id/sign_in_btn_now"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/now"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="normal"
            app:backgroundTint="@color/blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_tv_or" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--        <com.facebook.please_sign.widget.LoginButton-->
    <!--            android:id="@+id/login_btn_facebook_sign_in"-->
    <!--            android:layout_width="0dp"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:layout_gravity="center_horizontal"-->
    <!--            android:layout_marginStart="16dp"-->
    <!--            android:layout_marginLeft="16dp"-->
    <!--            android:layout_marginTop="8dp"-->
    <!--            android:layout_marginEnd="16dp"-->
    <!--            android:layout_marginRight="16dp"-->
    <!--            app:layout_constraintEnd_toEndOf="parent"-->
    <!--            app:layout_constraintStart_toStartOf="parent"-->
    <!--            app:layout_constraintTop_toBottomOf="@+id/sign_in_tv_or" />-->

</androidx.constraintlayout.widget.ConstraintLayout>